# pbsfm-rss-feed

./: .gitignore  Cargo.toml  README.MD
.github/workflows/: build-cli.yml  fetch-feeds.yml  jekyll.yml
config/: programs.arg
docs/: Gemfile  _config.yml  index.md  rss.xml
docs/_layouts/: default.html
docs/_plugins/: jekyll_xml_data.rb
docs/_sass/: base.scss
docs/assets/css/: main.scss
docs/feeds/pbsfm/babylon-burning/: rss.xml
docs/feeds/pbsfm/black-wax/: rss.xml
docs/feeds/pbsfm/down-by-the-river/: rss.xml
docs/feeds/pbsfm/electric-sunset/: rss.xml
docs/feeds/pbsfm/eternal-rhythm/: rss.xml
docs/feeds/pbsfm/fiesta-jazz/: rss.xml
docs/feeds/pbsfm/flight-1067-to-africa/: rss.xml
docs/feeds/pbsfm/headhunters/: rss.xml
docs/feeds/pbsfm/jazz-on-saturday/: rss.xml
docs/feeds/pbsfm/mystic-brew/: rss.xml
docs/feeds/pbsfm/riddim-yard/: rss.xml
docs/feeds/pbsfm/soul-time/: rss.xml
docs/feeds/pbsfm/switched-on/: rss.xml
docs/feeds/pbsfm/the-breakdown/: rss.xml
docs/feeds/pbsfm/the-breakfast-spread/: rss.xml
src/: lib.rs  main.rs  rss_macros.rs
src/airnet/: mod.rs  types.rs
src/rss/: category.rs  channel.rs  enclosure.rs  image.rs  item.rs  item_guid.rs  item_source.rs  mod.rs
tests/: episode-playlist.json  episodes.json  expected-black-wax-v2.rss  expected-black-wax.rss  program.json  test_airnet_client.rs  test_cli.rs  test_rss_conversion.rs
tests/mock_airnet/: mod.rs
tests/mock_airnet/responses/: all-programs.json  episode-playlist.json  episode.json  episodes.json  program.json
