[package]
name = "pbsfm-rss-feed"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41" , features = ["serde"]}
quick-xml = "0.38.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
rss-gen = "0.0.3"
serde = "1.0.219"

[dev-dependencies]
httpmock = "0.7.0-rc.1"
